--- a/src/main/resources/templates/registration/admin_form.html
+++ b/src/main/resources/templates/registration/admin_form.html
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-                <button type="submit" class="btn btn-primary">Create New Admin</button>
+                <button id="create" type="submit" class="btn btn-primary">Create New Admin</button>
                 <a href="/" type="button" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
