--- a/src/main/resources/templates/registration/signup_form.html
+++ b/src/main/resources/templates/registration/signup_form.html
@@ -37,7 +37,7 @@
             </div>
 
             <div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button id="create" type="submit" class="btn btn-primary">Sign Up</button>
                 <a href="/" type="button" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
