--- a/src/main/resources/templates/profile/edit_profile.html
+++ b/src/main/resources/templates/profile/edit_profile.html
@@ -16,11 +16,11 @@
         <h5 class="display-5 fw-bold">Personal info</h5>
         <div>
             <label class="col-form-label col-4">First Name</label>
-            <input type="text" th:field="*{firstName}">
+            <input id="firstName" type="text" th:field="*{firstName}">
         </div>
         <div>
             <label class="col-form-label col-4">Last Name</label>
-            <input type="text" th:field="*{lastName}">
+            <input id="lastName" type="text" th:field="*{lastName}">
         </div>
         <div>
             <label class="col-form-label col-4">Birth Date</label>
@@ -46,7 +46,7 @@
         </div>
         <div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <a type="button" onclick="goBack()" class="btn btn-secondary">Cancel</a>
+            <a type="button" href="/profile" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
 </div>
