--- a/src/main/resources/templates/user_management/user_form.html
+++ b/src/main/resources/templates/user_management/user_form.html
@@ -93,6 +93,7 @@
 
             <div>
                 <button type="submit" class="btn btn-primary">Update</button>
+                <a type="button" href="/users" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
     </form>
