--- a/src/main/resources/templates/user_management/users.html
+++ b/src/main/resources/templates/user_management/users.html
@@ -9,11 +9,8 @@
 <body>
 <div class="container text-center">
     <div>
-        <form th:action="@{/logout}" method="post">
-            <h3>
-                Welcome <b>[[${#request.userPrincipal.principal.name}]]</b>
-            </h3>
-            <input type="submit" class="btn btn-outline-warning" value="Sign Out">
+        <form th:action="@{/performLogout}" method="post">
+            <input type="submit" value="Logout" class="btn btn-info btn-lg"/>
         </form>
     </div>
     <div>
